# fitness-mcp

./: .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  claude-mcp-config.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
data/: .~lock.RbTnSeq_modules_t1e-7.csv#  RbTnSeq_modules_t1e-7.csv  exp_organism_Agro.txt  module_meta.tsv
data/.claude/: settings.local.json
prompts/: comprehensive-fitness-demo.txt  fitness-demo-prompt.txt  network-analysis-demo.txt
src/fitness_mcp/: __init__.py  create_modules_iterative.py  data_processing.py  main.py
src/scripts/: create_modules_from_pairs.py  create_modules_iterative.py  process_fit_t.py
tests/: conftest.py  test_api.py  test_api_contracts.py  test_data_loaders.py  test_integration.py  test_mcp_tools.py  test_metadata_registry.py  test_pairs_functions.py
