[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fitness-mcp"
version = "0.1.0"
description = "A fitness MCP"
readme = "README.md"
authors = [
    {name = "Justin Reese, Marcin Joachimiak, Adam D, lots of others", email = "justinreese@lbl.gov"},
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.7.1",
]

[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
  "black",
]

[project.urls]
"Homepage" = "https://github.com/justaddcoffee/fitness-mcp"
"Bug Tracker" = "https://github.com/justaddcoffee/fitness-mcp/issues"

[project.scripts]
fitness-mcp = "fitness_mcp.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fitness_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]